--- a/introduction.tex
+++ b/introduction.tex
@@ -20,7 +20,7 @@ polynomial time is equivalent to the P versus NP, one of the seven millennium pr
 
 Despite this complexity, SAT solver are becoming more and more powerful.
 Over the last decades, these can handle more and more complicated problems in different domains:
-like \emph{formal methods} such that: bounded model checking (BMC)~\cite{bmc_99}; \emph{artificial intelligence}: planning decision~\cite{planning_92}; \emph{Bioinformatics} : Haplotype inference~\cite{biology_06}.
+like \emph{formal methods} such that: bounded model checking (BMC)~\cite{bmc_99}; \emph{artificial intelligence}: planning decision~\cite{planning_92}; \emph{Informatics} : Haplotype inference~\cite{biology_06}.
 In a recent work, a SAT solver could solve the Pythagorean triple problem~\cite{heule2016solving}, an old mathematical conjecture,
 with a proof of 200 TB.
 This success comes from the introduction of sophisticated heuristics and optimization of the solving 
