--- a/main.tex
+++ b/main.tex
@@ -45,9 +45,9 @@ outer=3.8cm, % Outer margin
 \usepackage{multirow}
 \usepackage{setspace}
 \usepackage{enumitem}
-%\usepackage{DejaVuSans}
-%\usepackage[T1]{fontenc}
-
+\usepackage[framemethod=TikZ]{mdframed}\mdfsetup{frametitlealignment=\center}
+\usepackage[most]{tcolorbox}
+\tcbuselibrary{theorems}
 
 
 %%% Colors ====================================================================
