--- a/cosy.tex
+++ b/cosy.tex
@@ -94,10 +94,14 @@ x_4, \neg x_4\}$ and we can deduce than $\eta(\alpha, g) = (U \cup g^{-1}.U)
  $g.\beta < \beta$. \end{proof}
 \medskip\noindent It is important to observe that the notion of \textit{ebsp}
 is a refinement of the classical concept of \textit{sbp} defined in \cite{aloul06}. Specifically, like \textit{sbp}, \textit{esbp} preserve satisfiability.
+
+\clearpage 
+
 \begin{theorem}[Satisfiability preservation]
  Let $\varphi$ be a formula and $\psi$ an \textit{esbp} for some assignment $\alpha$ under $g \in G_{\varphi}$. Then,
  $$\varphi~and ~\varphi \wedge \psi \text{ are equi-satisfiable}.$$
 \end{theorem}
+
 \begin{proof}
  
  If $\varphi \wedge \psi$ is SAT then $\varphi$ is trivially SAT. If
